--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
-	<title>VAS Noticias</title>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>VAS Noticias</title>
+	<meta property="og:title" content="VAS Noticias">
+	<meta property="og:site_name" content="VAS Noticias">
+	<meta name="description" content="Entérese de los eventos y noticias más recientes de la iglesia Vida Abundante del Sur.">
+	<meta property="og:description" content="Entérese de los eventos y noticias más recientes de la iglesia Vida Abundante del Sur.">
+	<meta property="og:image" content="https://vas-noticias.netlify.app/images/og-image.png">
+	<meta property="og:type" content="website">
 	%sveltekit.head%
 </head>
 
