--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<meta property="og:site_name" content="VAS Noticias">
 	<meta name="description" content="Entérese de los eventos y noticias más recientes de la iglesia Vida Abundante del Sur.">
 	<meta property="og:description" content="Entérese de los eventos y noticias más recientes de la iglesia Vida Abundante del Sur.">
-	<meta property="og:image" content="https://vas-noticias.netlify.app/images/og-image.png">
+	<meta property="og:image" content="https://noticias.vas.cr/images/og-image.png">
 	<meta property="og:type" content="website">
 	%sveltekit.head%
 </head>
